@@ -28,6 +28,53 @@ User: 1.1.1.0/24 dev br0 GW 2.2.2.10 SRC 2.2.2.2
 User: 1.1.2.0/24 MARK 2 dev br0 GW 2.2.2.10 SRC 2.2.2.2
 User: 2.2.2.3/32 MARK 1 dev br0 SRC 2.2.2.2
 ])
+AT_CHECK([ovs-appctl --format=json --pretty ovs/route/show], [0], [dnl
+[[
+  {
+    "dst": "2.2.2.0",
+    "local": true,
+    "nexthops": [
+      {
+        "dev": "br0"}],
+    "prefix": 24,
+    "prefsrc": "2.2.2.2",
+    "priority": 184,
+    "user": false},
+  {
+    "dst": "1.1.1.0",
+    "local": false,
+    "nexthops": [
+      {
+        "dev": "br0",
+        "gateway": "2.2.2.10"}],
+    "prefix": 24,
+    "prefsrc": "2.2.2.2",
+    "priority": 152,
+    "user": true},
+  {
+    "dst": "1.1.2.0",
+    "local": false,
+    "mark": 2,
+    "nexthops": [
+      {
+        "dev": "br0",
+        "gateway": "2.2.2.10"}],
+    "prefix": 24,
+    "prefsrc": "2.2.2.2",
+    "priority": 152,
+    "user": true},
+  {
+    "dst": "2.2.2.3",
+    "local": false,
+    "mark": 1,
+    "nexthops": [
+      {
+        "dev": "br0"}],
+    "prefix": 32,
+    "prefsrc": "2.2.2.2",
+    "priority": 160,
+    "user": true}]]
+])
 OVS_VSWITCHD_STOP
 AT_CLEANUP
 
